# -python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: even_game.py
brain_games/games/: arifmetic.py  calc.py  even_game.py  great_com_div.py  prime_num.py  total.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
