[tool.poetry]
name = "brain-games"
version = "0.1.0"
description = ""
authors = ["verafadeeva <lunatik.yar@gmail.com>"]
readme = "README.md"
packages = [{ include = "brain_games" }, ]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:game"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
